Vue component added with API
