# main.py
@@ -1,15 +1,19 @@
 import os 
+import logging 
 from flask import Flask 
 from flask_restful import Resource, Api
 from application import config
 from application.config import LocalDevelopmentConfig 
 from application.database import db 
-import logging 
+from flask_security import Security, SQLAlchemySessionUserDatastore, SQLAlchemyUserDatastore 
+from application.models import User, Role 
+from flask_cors import CORS
+
 logging.basicConfig(
-        filename = 'debug.log', 
-        level = logging.DEBUG, 
-        format = f"%(asctime)s %(levelname)s %(name)s %(threadName)s : %(message)s"
-    )
+    filename = 'debug.log', 
+    level = logging.DEBUG, 
+    format = f"%(asctime)s %(levelname)s %(name)s %(threadName)s : %(message)s"
+)
 
 app = None 
 api = None 
@@ -22,9 +26,14 @@ def create_app() :
     else : 
         print('starting local dev')
         app.config.from_object(LocalDevelopmentConfig)
+
     db.init_app(app)
     api = Api(app)
     app.app_context().push()
+    user_datastore = SQLAlchemySessionUserDatastore(db.session, User, Role)
+    security = Security(app, user_datastore)
+    app.logger.info("App setup complete")
+    CORS(app)
     return app, api 
     # return app
 
@@ -33,9 +42,17 @@ app, api = create_app()
 
 # import all the controllers so they are loaded 
 from application.controllers import *
-from application.api import UserAPI, ProductAPI
+from application.api import UserAPI, ProductAPI, CartAPI, AdminDashboarAPI, ProductPageAPI, OffersAPI
 api.add_resource(UserAPI, "/api/user", "/api/user/<string:username>")
 api.add_resource(ProductAPI, "/api/product", "/api/category/<string:product>")
+api.add_resource(CartAPI, "/api/cart", "/api/cart/<string:username>")
+api.add_resource(AdminDashboarAPI, "/api/admin", "/api/admin/<string:username>")
+api.add_resource(ProductPageAPI, "/api/product-page", "/api/product-page/<string:username>")
+api.add_resource(OffersAPI, "/api/offers", "/api/offers/<string:username>")
+
+@app.errorhandler(404)
+def page_not_found(e) :
+    return render_template('error.html'), 404
 
 if __name__ == '__main__' : 
     app.run(host = '0.0.0.0', port = 8080)
